# c-folder

./: README.md
cvulkan/: cvulkan.c  cvulkan.h
deltatime/: README.md  deltatime.c  deltatime.h
drawing_a_fox/: .gitignore  README.md  compile.sh  compile_commands.json  main.c  run_memory_checks.sh
font_atlas_freetype/: .gitignore  compile_commands.json  renamethis.c  renamethis.h
font_atlas_freetype/demo/: compile.sh  compile_commands.json  demo.c
fontbmp/: README.md  fontbmp.c  fontbmp.h
fontbmp/demo/: .gitignore  compile.sh  compile_commands.json  demo.c  run_memory_checks.sh
sw-render/: .gitignore  README.md  compile.sh  font.c  font.h  sw-render.c  sw-render.h  test.c  todo.txt
sw-render/demo/: .gitignore  README.md  compile.sh  demo  demo.c
sw-render/tests/: compile.sh  test.c
swayipc/: README.md  swayipc.c  swayipc.h
swayipc/demo/: compile.sh  demo.c  mem.json
taskbar/: .gitignore  README.md  compile.sh  compile_commands.json  main.c  run_memory_checks.sh  sj.h  taskbar.c  taskbar.h
taskbar/demo/: compile.sh  demo  demo.c
taskbar/protocols/: gen_protocol_headers.sh
trying_freetype/: .gitignore  README.md  compile.sh  compile_commands.json  freetype-2.14.2.tar.xz  ft2demos-2.14.2.tar.xz  main.c
trying_freetype/freetype/builds/unix/: config.status  freetype-config  freetype2.pc  ftoption.h  libtool  unix-cc.mk  unix-def.mk
trying_freetype/freetype/objs/: apinames  autofit.lo  bdf.lo  cff.lo  dlg.lo  ftbase.lo  ftbbox.lo  ftbdf.lo  ftbitmap.lo  ftbzip2.lo  ftcache.lo  ftcid.lo  ftdebug.lo  ftfstype.lo  ftgasp.lo  ftglyph.lo  ftgxval.lo  ftgzip.lo  ftinit.lo  ftlzw.lo  ftmm.lo  ftotval.lo  ftpatent.lo  ftpfr.lo  ftstroke.lo  ftsynth.lo  ftsystem.lo  fttype1.lo  ftwinfnt.lo  libfreetype.la  pcf.lo  pfr.lo  psaux.lo  pshinter.lo  psnames.lo  raster.lo  sdf.lo  sfnt.lo  smooth.lo  svg.lo  (+5 more)
trying_freetype/freetype/objs/.libs/: libfreetype.lai  libfreetype.so.6.20.5
trying_freetype/ft2demos-2.14.2/: ChangeLog  MSBuild.sln  Makefile  README  meson.build  meson_options.txt  vms_make.com
trying_freetype/ft2demos-2.14.2/builds/windows/msvc/: ft2demos.props  ftbench.vcxproj  ftdump.vcxproj  ftgamma.vcxproj  ftgrid.vcxproj  ftlint.vcxproj  ftmulti.vcxproj  ftstring.vcxproj  ftview.vcxproj  migs.vcxproj  ttdebug.vcxproj
trying_freetype/ft2demos-2.14.2/graph/: gblany.h  gblblit.c  gblender.c  gblender.h  graph.h  grdevice.h  grobjs.c  grobjs.h  grtypes.h  meson.build
trying_freetype/ft2demos-2.14.2/graph/batch/: grbatch.c
trying_freetype/ft2demos-2.14.2/graph/beos/: grbeos.cpp
trying_freetype/ft2demos-2.14.2/graph/mac/: grmac.c
trying_freetype/ft2demos-2.14.2/graph/os2/: gros2pm.c
trying_freetype/ft2demos-2.14.2/graph/win32/: grwin32.c  grwin32.h
trying_freetype/ft2demos-2.14.2/graph/x11/: grx11.c  grx11.h  rules.mk
trying_freetype/ft2demos-2.14.2/mac/: ftoldmac.c  getargv.c
trying_freetype/ft2demos-2.14.2/man/: ftbench.1  ftdiff.1  ftdump.1  ftgamma.1  ftgrid.1  ftlint.1  ftmulti.1  ftsdf.1  ftstring.1  ftvalid.1  ftview.1  ttdebug.1
trying_freetype/ft2demos-2.14.2/objs/: gblblit.lo  gblender.lo  graph.la  grbatch.lo  grdevice.lo  grfill.lo  grfont.lo  grinit.lo  grobjs.lo  grswizzle.lo  grx11.lo
trying_freetype/ft2demos-2.14.2/objs/.libs/: graph.la
trying_freetype/ft2demos-2.14.2/src/: common.c  common.h  compos.c  ftbench.c  ftchkwd.c  ftcommon.c  ftcommon.h  ftdiff.c  ftdump.c  ftgamma.c  ftgrid.c  ftlint.c  ftmemchk.c  ftmulti.c  ftpatchk.c  ftpngout.c  ftsbit.c  ftsdf.c  ftstring.c  fttimer.c  fttry.c  ftvalid.c  ftview.c  gbench.c  gbench.h  output.c  output.h  rsvg-port.c  rsvg-port.h  strbuf.c  strbuf.h  testname.c  ttdebug.c
trying_freetype/ft2demos-2.14.2/src/ftinspect/: CMakeLists.txt  ftinspect.cpp  maingui.cpp  maingui.hpp  meson.build  uihelper.cpp  uihelper.hpp
trying_freetype/ft2demos-2.14.2/src/ftinspect/engine/: charmap.cpp  charmap.hpp  engine.cpp  engine.hpp  fontfilemanager.cpp  fontfilemanager.hpp  fontinfo.cpp  fontinfo.hpp  fontinfonamesmapping.cpp  mmgx.cpp  mmgx.hpp  paletteinfo.cpp  paletteinfo.hpp  rendering.cpp  rendering.hpp  stringrenderer.cpp  stringrenderer.hpp
trying_freetype/ft2demos-2.14.2/src/ftinspect/glyphcomponents/: glyphbitmap.cpp  glyphbitmap.hpp  glyphcontinuous.cpp  glyphcontinuous.hpp  glyphoutline.cpp  glyphoutline.hpp  glyphpointnumbers.cpp  glyphpointnumbers.hpp  glyphpoints.cpp  glyphpoints.hpp  graphicsdefault.cpp  graphicsdefault.hpp  grid.cpp  grid.hpp
trying_freetype/ft2demos-2.14.2/src/ftinspect/models/: customcomboboxmodels.cpp  customcomboboxmodels.hpp  fontinfomodels.cpp  fontinfomodels.hpp
trying_freetype/ft2demos-2.14.2/src/ftinspect/panels/: abstracttab.hpp  comparator.cpp  comparator.hpp  continuous.cpp  continuous.hpp  glyphdetails.cpp  glyphdetails.hpp  info.cpp  info.hpp  settingpanel.cpp  settingpanel.hpp  settingpanelmmgx.cpp  settingpanelmmgx.hpp  singular.cpp  singular.hpp
trying_freetype/ft2demos-2.14.2/src/ftinspect/widgets/: charmapcombobox.cpp  charmapcombobox.hpp  customwidgets.cpp  customwidgets.hpp  fontsizeselector.cpp  fontsizeselector.hpp  glyphindexselector.cpp  glyphindexselector.hpp  tripletselector.cpp  tripletselector.hpp
vulkan-software-rendering-template/: README.md  a.out  compile.sh  cvulkan.c  main.c
